# AI-Conversational-Companion

./: CMakeLists.txt  README.md
assets/: persona.json
src/core/: persona_engine.cpp  persona_engine.h  types.h
src/ui/: ChatWindow.cpp  ChatWindow.h
